--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
-name: climxtract
 channels:
     - conda-forge
 dependencies:
     - cdo==2.5.0
+    - ipykernel
     - pip
     - pip:
         - matplotlib
